--- a/hello-spring-first/pom.xml
+++ b/hello-spring-first/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.sq2wkh.spring.tutorials</groupId>
+    <groupId>pl.sq2wkh.spring.tutorial</groupId>
     <artifactId>hello-spring-first</artifactId>
     <version>1.0</version>
 
     <parent>
-        <groupId>pl.sq2wkh.spring.tutorials</groupId>
+        <groupId>pl.sq2wkh.spring.tutorial</groupId>
         <artifactId>spring-tutorials</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
