--- a/hello-spring-singleton/pom.xml
+++ b/hello-spring-singleton/pom.xml
@@ -2,29 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring-tutorials</artifactId>
+        <groupId>pl.sq2wkh.spring.tutorial</groupId>
+        <version>1.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.sq2wkh.spring.tutorial</groupId>
-    <artifactId>spring-tutorials</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0</version>
-<modules>
-    <module>hello-spring-first</module>
-    <module>hello-spring-singleton</module>
-</modules>
+    <artifactId>hello-spring-singleton</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.0.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.0.5.RELEASE</version>
         </dependency>
-
     </dependencies>
 
 </project>
