--- a/hello-spring/pom.xml
+++ b/hello-spring/pom.xml
@@ -3,17 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>pl.sq2wkh.spring.tutorial</groupId>
-    <artifactId>hello-spring-first</artifactId>
-    <version>1.0</version>
-
     <parent>
         <groupId>pl.sq2wkh.spring.tutorial</groupId>
         <artifactId>spring-tutorials</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <artifactId>hello-spring</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
