dodanie nastepnego tutoriala i wyrzucenie niepotrzebnej deklaracji bibliotek w pomach

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>hello-spring</module>
     <module>hello-spring-singleton</module>
     <module>hello-spring-prototype</module>
+    <module>hello-spring-bean-lifecycle</module>
 </modules>
 
     <dependencies>
