--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>hello-spring-prototype</module>
     <module>hello-spring-bean-lifecycle</module>
     <module>hello-spring-bean-postprocessor</module>
+    <module>hello-spring-bean-definitioninheritance</module>
 </modules>
 
     <dependencies>
