--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>hello-spring-bean-lifecycle</module>
     <module>hello-spring-bean-postprocessor</module>
     <module>hello-spring-bean-definitioninheritance</module>
+    <module>hello-spring-dependency-injection</module>
 </modules>
 
     <dependencies>
