--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>hello-spring-bean-definitioninheritance</module>
     <module>hello-spring-dependency-injection</module>
     <module>hello-spring-collection-injection</module>
+    <module>hello-spring-javabased-configuration</module>
 </modules>
 
     <dependencies>
